Add patch operations for users in auth service (#338)
